--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Singing'
 - !lcc 'MT'
 - !lcsh 'Performance practice (Music) -- Early works to 1800'
+- GITenberg
 title: Observations on the Florid Song; Or, Sentiments on the Ancient and Modern Singers
 url: http://www.gutenberg.org/ebooks/26477
